pff 4.7.14, 2018-03-12
---------------------
- Rename the datasource bean names and corresponding property names from datasource to  dataSource for consistency

pff 4.7.14, 2018-03-05
----------------------
- Upgraded pennapps-core version from 0.7.4.2 to 0.7.5, to use security.
- Upgraded pennapps-web version from 0.5 to 0.6, to use security.

pff 4.7.14, 2018-03-05
----------------------
- Upgraded pennapps-web version from 0.4.3 to 0.5, to use framework UserWorksapce.
- Refer the framework zul files from pennapps-web.jar directly.
- Refactor the class LdapContext and its dependents to promote to framework 

pff 4.7.14, 2018-02-22
----------------------
- Moved GlobalVariable.java from com.pennant.backend.model to com.pennanttech.pennapps.core.model package

pff 4.7.14, 2018-02-22
----------------------
- Upgraded pennapps-core version from 0.7.3 to 0.7.4

pff 4.7.14, 2018-02-21
----------------------
- Refactoring removed the additional layer JdbcSearchSupport on SearchProcessor
- Refactoring removed PagedBindingListWrapper and PagedGridWrapper 

pff 4.7.14, 2018-02-15
----------------------
- Refactoring jdbc search

pff 4.7.14, 2018-02-14
----------------------
- Moved AbstractEntity.java and AbstractWorkflowEntity.java from com.pennanttech.pff.core.model to com.pennanttech.pennapps.core.model package
- Upgraded pennapps-core version from 0.7.2 to 0.7.3
- Upgraded pennapps-web version from 0.4.1 to 0.4.2

pff 4.7.14, 2018-02-14
----------------------
- Integrate the License validation functionality.

pff 4.7.11, 2018-02-13
---------------------
- Moved LoggedInUser.java from com.pennant.backend.model to com.pennanttech.pennapps.core.model package
- Moved ErrorDetail.java from com.pennant.backend.model to com.pennanttech.pennapps.core.model package

pff 4.1.0, 2018-01-26
---------------------
- Refactoring Rename bean ErrorDetails from ErrorDetails to ErrorDetail.
- Refactoring Remove the prefix Error from the ErrorDetail properties.