@@ -69,7 +69,7 @@
 			<dependency>
 				<groupId>com.pennanttech.pennapps</groupId>
 				<artifactId>pennapps-web</artifactId>
-				<version>0.6</version>
+				<version>0.6.1</version>
 			</dependency>
 			<!-- Logging Framework -->
 			<dependency>
